--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "input.js",
   "scripts": {
     "dev-server": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "cypress run --browser chrome --headless"
   },
   "author": "Tomasz Sidor",
   "license": "ISC",
